Fixed logo margin spacing

--- a/styles/tasks.css
+++ b/styles/tasks.css
@@ -18,9 +18,29 @@ main {
 	padding: 1rem;
 }
 
+/* Small screens */
+@media only screen and (max-width: 600px){
+
+}
+
+/* Large screens */
+@media only screen and (min-width: 600px){
+
+	.navbar{
+		top: 0;
+		width: 5rem;
+		height: 100vh;
+	}
+	.navbar:hover {
+		width: 16rem;
+	}
+	.navbar:hover .link-text {
+		display: inline;
+		transition: opacity var(--transition-speed);
+	}
+}
+
 .navbar{
-	width: 5rem;
-	height: 100vh;
 	position: fixed;
 	background-color: var(--bg-primary);
 	transition: width 200ms ease;
@@ -63,7 +83,7 @@ main {
 
 .link-text {
 	display: none;
-	margin-left: 1rem;
+	margin-left: 0.5rem;
 }
 
 .nav-link svg{
@@ -85,15 +105,10 @@ main {
 	transition: var(--transition-speed);
 }
 
-.navbar:hover {
-	width: 16rem;
-}
 
 .navbar:hover .link-text {
-	display: block;
 	font-weight: bold;
 	letter-spacing: 0.1ch;
-	transition: var(--transition-speed);
 }
 
 .logo {
@@ -107,6 +122,7 @@ main {
 	width: 100%;
 }
 
+.logo
 .logo svg {
 	transform: rotate(0deg);
 	transition: var(--transition-speed);
